--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div>
-  
-</div>
-
-<router-outlet></router-outlet>
+<app-header></app-header>
+<section>
+    <router-outlet></router-outlet>
+</section>
