--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,34 +1,40 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" routerLink="">Rede Social Genérica</a>
+      <a class="navbar-brand" routerLink="">{{ titulo }}</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" [attr.aria-expanded]="!isCollapsed" (click)="isCollapsed = !isCollapsed" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav" [ngClass]="{'show': !isCollapsed}">
         <ul class="navbar-nav">
-          <li class="nav-item" *ngIf="app.login">
-            <a class="nav-link" routerLink="post" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Post</a>
+          <li class="nav-item" *ngIf="app.permissao == 'anonimo'">
+            <a class="nav-link" routerLink="cadastro" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Cadastro</a>
           </li>
-          <li class="nav-item" *ngIf="app.login">
-            <a class="nav-link" aria-current="page" routerLink="home" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Home</a>
-          </li>
-          <li class="nav-item" *ngIf="app.login">
-            <a class="nav-link" routerLink="profile" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Profile</a>
-          </li>
-          <li class="nav-item" *ngIf="app.login">
-            <a class="nav-link" routerLink="friends" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Friends</a>
-          </li>
-          <li class="nav-item" *ngIf="!app.login">
+          <li class="nav-item" *ngIf="app.permissao == 'anonimo'">
             <a class="nav-link" routerLink="login" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Login</a>
           </li>
-          <li class="nav-item" *ngIf="!app.login">
-            <a class="nav-link" routerLink="signup" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">SignUp</a>
+          <li class="nav-item" *ngIf="app.permissao == 'anonimo'">
+            <a class="nav-link" routerLink="sobre" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Sobre</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="about" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">About</a>
+          <li class="nav-item" *ngIf="app.permissao == 'funcionario'">
+            <a class="nav-link" routerLink="pedidos/listar" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Lista de Pedidos</a>
           </li>
-          <li class="nav-item" *ngIf="app.login">
-            <a class="nav-link" routerLink="quit" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Logout</a>
+          <li class="nav-item" *ngIf="app.permissao == 'funcionario'">
+            <a class="nav-link" routerLink="pedidos/cadastrar" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Cadastrar Pedido</a>
+          </li>
+          <li class="nav-item" *ngIf="app.permissao == 'dono'">
+            <a class="nav-link" routerLink="cadastro" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Cadastrar Funcionário</a>
+          </li>
+          <li class="nav-item" *ngIf="app.permissao == 'dono'">
+            <a class="nav-link" routerLink="prato/cadastrar" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Cadastrar Pratos</a>
+          </li>
+          <li class="nav-item" *ngIf="app.permissao == 'dono'">
+            <a class="nav-link" routerLink="prato/listar" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Listar Pratos</a>
+          </li>
+          <li class="nav-item" *ngIf="app.permissao == 'dono'">
+            <a class="nav-link" routerLink="logs" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Logs</a>
+          </li>
+          <li class="nav-item" *ngIf="app.permissao != 'anonimo'">
+            <a class="nav-link" routerLink="logout" routerLinkActive="active" (click)="isCollapsed = !isCollapsed">Logout</a>
           </li>
         </ul>
       </div>
