Iniciando criação do layout de listagem de pedidos

--- a/src/app/pedidos/pedidos.component.html
+++ b/src/app/pedidos/pedidos.component.html
@@ -1,7 +1,1 @@
-<div class="card mt-4">
-    <div class="card-body">
-        <h5 class="card-title">Nome da Pessoa</h5>
-        <h6 class="card-subtitle mb-2 text-muted">@Username</h6>
-        <p class="card-text">Mensagem que eu quero que todo mundo saiba.</p>
-    </div>
-</div>
+<app-pedido *ngFor="let pedido of getPedidos()" [pedido]="pedido"></app-pedido>
