--- a/src/app/pedido/pedido.component.html
+++ b/src/app/pedido/pedido.component.html
@@ -1,19 +1,28 @@
 <div class="card mt-4">
     <div class="card-body">
-        <h5 class="card-title">Nome da Pessoa</h5>
-        <h6 class="card-subtitle mb-2 text-muted">@Username</h6>
-        <p class="card-text">Mensagem que eu quero que todo mundo saiba.</p>
+        <div class="row">
+            <div class="col-md-4"><h5 class="card-title">Mesa {{ pedido.mesa }}</h5></div>
+            <div class="col-md-6 text-end"><h6 class="card-subtitle"><strong>Estado:</strong> {{ pedido.estado.nome }}</h6></div>
+            <div *ngIf="pedido.estado.idEstado == estado.Cadastrado" class="col-md-1"><button type="button" class="btn btn-dark">Preparar</button></div>
+            <div *ngIf="pedido.estado.idEstado == estado.Preparando" class="col-md-1"><button type="button" class="btn btn-dark">Preparado</button></div>
+            <div *ngIf="pedido.estado.idEstado == estado.Preparado" class="col-md-1"><button type="button" class="btn btn-dark">Entregar</button></div>
+            <div *ngIf="pedido.estado.idEstado == estado.Entregando" class="col-md-1"><button type="button" class="btn btn-dark">Entregue</button></div>
+            <div *ngIf="pedido.estado.idEstado == estado.Entregue" class="col-md-1"><button type="button" class="btn btn-dark">Pago</button></div>
+            <div class="col-md-1"><button type="button" class="btn btn-dark">Cancelar</button></div>
+        </div>
         <table class="table">
             <thead>
                 <tr>
+                    <th scope="col">Quantidade</th>
                     <th scope="col">Nome</th>
                     <th scope="col">Preço</th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let prato of pedido.pratos" [prato]="prato">
-                    <td>{{ prato.nome }}</td>
-                    <td>{{ prato.preco }}</td>
+                <tr *ngFor="let prato of pedido.pedidosPratos" [prato]="prato">
+                    <td>{{ prato.quantidade }}</td>
+                    <td>{{ prato.prato.nome }}</td>
+                    <td>{{ prato.prato.preco }}</td>
                 </tr>
             </tbody>
         </table>
