--- a/src/app/pedido/pedido.component.html
+++ b/src/app/pedido/pedido.component.html
@@ -2,29 +2,39 @@
     <div class="card-body">
         <div class="row">
             <div class="col-md-4"><h5 class="card-title">Mesa {{ pedido.mesa }}</h5></div>
-            <div class="col-md-6 text-end"><h6 class="card-subtitle"><strong>Estado:</strong> {{ pedido.estado.nome }}</h6></div>
-            <div *ngIf="pedido.estado.idEstado == estado.Cadastrado" class="col-md-1"><button type="button" class="btn btn-dark">Preparar</button></div>
-            <div *ngIf="pedido.estado.idEstado == estado.Preparando" class="col-md-1"><button type="button" class="btn btn-dark">Preparado</button></div>
-            <div *ngIf="pedido.estado.idEstado == estado.Preparado" class="col-md-1"><button type="button" class="btn btn-dark">Entregar</button></div>
-            <div *ngIf="pedido.estado.idEstado == estado.Entregando" class="col-md-1"><button type="button" class="btn btn-dark">Entregue</button></div>
-            <div *ngIf="pedido.estado.idEstado == estado.Entregue" class="col-md-1"><button type="button" class="btn btn-dark">Pago</button></div>
-            <div class="col-md-1"><button type="button" class="btn btn-dark">Cancelar</button></div>
+            <div class="col-md-3"><h6 class="card-title"><strong>Estado:</strong> {{ pedido.estado.nome }}</h6></div>
+            <div class="col-md-3"><h6 class="card-title"><strong>Hora do Pedido:</strong> {{ pedido.dataDoPedido | date : 'HH:mm:ss' }}</h6></div><!-- 'dd/MM/y HH:mm:ss' -->
+            <div class="col-md-2 botoespedido" style="padding: 0;">
+                <button *ngIf="pedido.estado.idEstado != estado.Finalizado" type="button" class="btn btn-dark mr-3 float-right">Cancelar</button>
+                <button *ngIf="pedido.estado.idEstado == estado.Cadastrado" type="button" class="btn btn-dark mr-3 float-right">Preparar</button>
+                <button *ngIf="pedido.estado.idEstado == estado.Preparando" type="button" class="btn btn-dark mr-3 float-right">Preparado</button>
+                <button *ngIf="pedido.estado.idEstado == estado.Preparado" type="button" class="btn btn-dark mr-3 float-right">Entregar</button>
+                <button *ngIf="pedido.estado.idEstado == estado.Entregando" type="button" class="btn btn-dark mr-3 float-right">Entregue</button>
+                <button *ngIf="pedido.estado.idEstado == estado.Entregue" type="button" class="btn btn-dark mr-3 float-right">Pago</button>
+            </div>
         </div>
-        <table class="table">
+        <table class="table table-bordered" style="table-layout:fixed;">
             <thead>
                 <tr>
-                    <th scope="col">Quantidade</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Preço</th>
+                    <th scope="col" colspan="4">Nome</th>
+                    <th scope="col" colspan="2">Preço</th>
+                    <th scope="col" colspan="2">Quantidade</th>
+                    <th scope="col" colspan="2">Preço Total</th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let prato of pedido.pedidosPratos" [prato]="prato">
-                    <td>{{ prato.quantidade }}</td>
-                    <td>{{ prato.prato.nome }}</td>
-                    <td>{{ prato.prato.preco }}</td>
+                    <td colspan="4">{{ prato.prato.nome }}</td>
+                    <td colspan="2">{{ prato.prato.preco | currency : 'BRL' }}</td>
+                    <td colspan="2">{{ prato.quantidade }}</td>
+                    <td colspan="2">{{ prato.quantidade * prato.prato.preco | currency : 'BRL' }}</td>
                 </tr>
             </tbody>
+            <tfoot>
+                <th scope="col" colspan="6">Total</th>
+                <th scope="col" colspan="2">{{ pedido.qtdTotal() }}</th>
+                <th scope="col" colspan="2">{{ pedido.precoTotal() | currency : 'BRL' }}</th>
+            </tfoot>
         </table>
     </div>
 </div>
