--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -6,24 +6,24 @@
         </button>
     </div>
     <div class="modal-body">
-        <form>
+        <form novalidate #form="ngForm">
             <div class="mb-3 pl-2 pr-2">
                 <label for="nome" class="form-label">Nome Completo</label>
-                <input type="text" class="form-control" id="nome" aria-describedby="nomeHelp" placeholder="João Maria">
+                <input type="text" class="form-control" id="nome" aria-describedby="nomeHelp" placeholder="João Maria" name="nome" ngModel [(ngModel)]="app.usuario.nome">
                 <!-- <div id="nomeHelp" class="form-text">We'll never share your email with anyone else.</div> -->
             </div>
             <div class="mb-3 pl-2 pr-2">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="exemplo@gmail.com">
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="exemplo@gmail.com" name="email" ngModel [(ngModel)]="app.usuario.email">
                 <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
             </div>
             <div class="mb-3 pl-2 pr-2">
                 <label for="senha" class="form-label">Senha</label>
-                <input type="senha" class="form-control" id="senha" placeholder="Crie sua senha">
+                <input type="password" class="form-control" id="senha" placeholder="Crie sua senha" name="senha" ngModel [(ngModel)]="app.usuario.senha">
             </div>
         </form>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-dark">Cadastrar</button>
+        <button type="button" class="btn btn-dark" (click)="cadastrar()">Cadastrar</button>
     </div>
 </ng-template>
