Não sei o que eu fiz

--- a/src/app/cadastro_pedido/cadastro_pedido.component.html
+++ b/src/app/cadastro_pedido/cadastro_pedido.component.html
@@ -8,8 +8,8 @@
     <div class="modal-body">
         <form>
             <div class="mb-3 pl-2 pr-2">
-                <label for="nome" class="form-label">Mesa</label>
-                <input type="text" class="form-control" id="nome" aria-describedby="nomeHelp" placeholder="">
+                <label for="mesa" class="form-label">Mesa</label>
+                <input type="text" class="form-control" id="mesa" aria-describedby="nomeHelp" placeholder="" name="mesa" ngModel [(ngModel)]="pedido.mesa">
                 <!-- <div id="nomeHelp" class="form-text">We'll never share your email with anyone else.</div> -->
             </div>
             <div class="row pl-2 pr-2">
